--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=20000"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router": "^5.0.0",
+    "react-scripts": "^2.1.3",
+    "web-vitals": "^2.1.4",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -17,5 +28,16 @@
     "mongoose": "^6.3.4",
     "nodemon": "^2.0.16",
     "react-router-dom": "^6.3.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^28.1.0",
+    "supertest": "^6.2.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
