--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "react-test-renderer": "^18.1.0",
+    "supertest": "^6.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
