--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest --testTimeout=20000"
+    "test": "cross-env NODE_ENV=test jest --testTimeout=20000",
+    "build":"cd client && react-scripts build"
   },
   "author": "",
   "license": "ISC",
