--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "jest": "^28.1.0",
+    "jest": "23.6.0",
     "supertest": "^6.2.3"
   },
   "jest": {
